# backend/src/main/resources/openapi3-spec.yaml
@@ -85,46 +85,36 @@ paths:
             application/json; charset=utf-8:
               schema:
                 $ref: "#/components/schemas/ApiFehler"
-    delete:
+  /idee/loeschen:
+    post:
       tags:
         - idee
       summary: Löschen einer Idee
       operationId: ideeLoeschen
       parameters:
-        - name: titel
-          in: query
-          description: Titel der zu loeschenden Idee
-          required: true
+        - in: header
+          name: Authorization
           schema:
             type: string
-            pattern: '^[^\^°=*#~,;:(){}§$%<>|''`´\/\\]*$'
-            minLength: 1
-        - name: erfasser
-          in: query
-          description: Benutzername des Erfassers der zu loeschenden Idee
           required: true
-          schema:
-            type: string
-            pattern: '^[\wäüöÄÜÖß]+[\s\wäüöÄÜÖß]*$'
-            minLength: 1
-        - name: erstelldatum
-          in: query
-          description: Erstelldatum der zu loeschenden Idee
-          required: true
-          schema:
-            type: string
-            pattern: '^\s*(3[01]|[12][0-9]|0?[1-9])\.(1[012]|0?[1-9])\.((?:19|20)\d{2})\s([01][0-9]|2[0-3]):([012345][0-9]):([012345][0-9])$'
+      requestBody:
+        content:
+          application/json; charset=utf-8:
+            schema:
+              $ref: "#/components/schemas/IdeeDTO"
+        description: Zu loeschende Idee
+        required: true
       responses:
         "200":
-          description: erfolgreich
+          description: Idee erfolgreich gelöscht.
           content:
-            application/json:
+            application/json; charset=utf-8:
               schema:
                 type: string
         "400":
           description: Fehlerhafte Eingabe
           content:
-            application/json:
+            application/json; charset=utf-8:
               schema:
                 $ref: "#/components/schemas/ApiFehler"
   /idee/meineideen:
